objects/Gong__Topic__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Topic_Duration_Min__c</fullName>
        <formula>IF( Gong__Topic_Duration_Sec__c &gt;=3600,  TEXT(FLOOR(Gong__Topic_Duration_Sec__c/ 3600))&amp;&quot;:&quot; , &quot;&quot;)
&amp; 
TEXT(FLOOR(MOD(Gong__Topic_Duration_Sec__c,3600)/600)) &amp; 
TEXT(FLOOR(MOD(Gong__Topic_Duration_Sec__c,600)  / 60))
&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(Gong__Topic_Duration_Sec__c,60)/10)) &amp; 
TEXT(FLOOR(MOD(Gong__Topic_Duration_Sec__c,10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Duration (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Topic_Duration_Percent__c</fullName>
        <label>Topic Duration (Percent)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gong__Topic_Duration_Sec__c</fullName>
        <label>Topic Duration (Sec.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Topic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>